my profile page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Julia Kauffmann</h1>
         <h2>Product Manager</h2>
           <img id="img-circle" src="images/julie.jpg" alt ="Julie" width="100">
-          <p>I love digital products and communication. I just moved to Lisbon and I love the city a lot. The most I enjoy the surfing and going out for good food and drinks. Wanna catch up?</p>
+          <p>I love digital products and comunication. I just moved to Lisbon and I love the city a lot. The most I enjoy the surfing and going out for good food and drinks. Wanna catch up?</p>
           <button><a href="https://www.facebook.com/ju.lie.94651" target="_blank">Let`s talk</a></button>
       </div>
       <div class="card">
